<resources>
    <string name="app_name">Android Ringtone</string>

    <!--<Admob App ID>-->
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>

    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="download">Download</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="search">Search</string>

    <string name="company">Company</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>

    <string name="made_with_in_srilanka">Made With ❤ in Sri Lanka</string>
    <string name="app_developer_by_nemosofts">App developer By : Nemosofts</string>

    <string name="loading">loading...</string>
    <string name="downloading">downloading</string>
    <string name="already_download">already download</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="add_to_fav">Added to Favourite</string>
    <string name="remove_from_fav">Removed from Favourite</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="internet_connection_is_not_available">Internet Connection is not available.</string>
    <string name="err_internet_not_conn">err internet</string>
    <string name="file_deleted">File Deleted</string>
    <string name="sure_delete">Are you sure you want to delete this Ringtone?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="set_as_ring">Set As Ringtone</string>
    <string name="set_as_noti">Set As Notificaiton tone</string>
    <string name="set_as_alarm">Set As Alarm tone</string>
    <string name="alarm_set">Alarm Ringtone Set</string>
    <string name="noti_set">Notification tone set</string>
    <string name="ringtone_set">Ringtone Set</string>
    <string name="exit">exit</string>
    <string name="retey">RETEY</string>

    <string name="err_no_categories_found">No Categories Found</string>
    <string name="error_unauth_access">Unauthorized Access</string>
    <string name="server_error">Server Error</string>
    <string name="error_connect_net_tryagain">Please connect to internet and try again</string>
    <string name="try_again">Try Again</string>







    <string name="welcomeback">Welcome</string>
    <string name="signin_to_continue">Sign In to continue</string>
    <string name="remember_me">Remember Me</string>
    <string name="registering">Registering..</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="signup">SignUp</string>
    <string name="cannot_empty">Field cannot be empty</string>
    <string name="pass_end_space">Please do not add space at end</string>
    <string name="name">Name</string>
    <string name="cpassword">Confirm Password</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="register">Register</string>
    <string name="phone">Phone</string>
    <string name="enter_name">Please Enter Name</string>
    <string name="enter_email">Please Enter Email</string>
    <string name="enter_password">Please Enter Password</string>
    <string name="enter_cpassword">Please Enter Confirm Password</string>
    <string name="pass_nomatch">Confirm Password not matched</string>
    <string name="logout">Logout</string>
    <string name="logout_success">Logout Successful</string>
    <string name="image">Image</string>
    <string name="error_password_sort">This password is too short</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="err_server">err server</string>
    <string name="ok">OK</string>


</resources>
