<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_user_by"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="My Update" />

        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_bookmark"
            android:title="@string/favourite" />

        <item
            android:id="@+id/nav_download"
            android:icon="@drawable/ic_download"
            android:title="@string/download" />

        <item
            android:id="@+id/nav_upload"
            android:icon="@drawable/ic_upload"
            android:title="UploadRingtone" />

        <item
            android:id="@+id/nav_set"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_login"
            android:title="@string/login" />
    </group>

    
</menu>